[package]
name = "cvopt"
version = "0.1.0"
edition = "2021"
description = "Program to populate the abundance file based on CheckV result"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.20.1", features = ["full"] }